--- a/OpenSC/TimerWindow.resx
+++ b/OpenSC/TimerWindow.resx
@@ -117,53 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="timer_clock_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_clock_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_backward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_forward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_forward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_clock" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_clock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_forward_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_forward_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_backward_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_backward_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_purple" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_purple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="timerDisplayContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
