--- a/OpenSC/Properties/Resources.resx
+++ b/OpenSC/Properties/Resources.resx
@@ -166,6 +166,9 @@
   <data name="timer_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\timer_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="empty_transparent" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empty_transparent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_16_timer_backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16_timer_backward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
