--- a/OpenSC/Properties/Resources.resx
+++ b/OpenSC/Properties/Resources.resx
@@ -196,4 +196,19 @@
   <data name="32_tile_vertically" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\32_tile_vertically.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_16_stream_ended" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_ended.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_not_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_not_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_not_started" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_not_started.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_unknown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_unknown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
