--- a/OpenSC/Properties/Resources.resx
+++ b/OpenSC/Properties/Resources.resx
@@ -211,4 +211,22 @@
   <data name="_16_stream_unknown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16_stream_unknown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_16_vtr_fastforwarding" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_fastforwarding.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_playing" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_playing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_recording" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_recording.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_rewinding" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_rewinding.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
