--- a/OpenSC/Properties/Resources.resx
+++ b/OpenSC/Properties/Resources.resx
@@ -118,44 +118,29 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="32_tile_vertically" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32_tile_vertically.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="solid_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\solid_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_recording" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_recording.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="timer_clock_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\timer_clock_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_16_timer_clock" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_timer_clock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="timer_clock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_clock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_16_timer_backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_timer_backward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="solid_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solid_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_16_timer_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_timer_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="32_tile_horizontally" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\32_tile_horizontally.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="timer_backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_backward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_timer_reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_timer_reset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_forward_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_forward_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_backward_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_backward_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_forward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_forward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="solid_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solid_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_16_timer_forward" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16_timer_forward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,70 +148,91 @@
   <data name="timer_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\timer_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_16_timer_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_timer_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_clock" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_clock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="timer_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="empty_transparent" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\empty_transparent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solid_purple" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solid_purple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_16_vtr_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_16_timer_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16_timer_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="timer_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\timer_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="solid_purple" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solid_purple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="32_tile_horizontally" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\32_tile_horizontally.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="empty_transparent" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empty_transparent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="32_tile_vertically" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\32_tile_vertically.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_stream_ended" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_stream_ended.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_stream_not_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_stream_not_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_stream_not_started" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_stream_not_started.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_stream_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_stream_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_stream_unknown" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_stream_unknown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_vtr_fastforwarding" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_vtr_fastforwarding.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="_16_vtr_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_vtr_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_16_timer_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_timer_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_16_vtr_playing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16_vtr_playing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_16_vtr_recording" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_vtr_recording.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_16_stream_unknown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_unknown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_ended" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_ended.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solid_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solid_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_timer_backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_timer_backward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_not_started" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_not_started.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="timer_forward_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_forward_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solid_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solid_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_reset1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_stream_not_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_stream_not_running.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_timer_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_timer_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_16_vtr_rewinding" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\16_vtr_rewinding.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="_16_vtr_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16_vtr_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="timer_backward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_backward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="timer_forward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_forward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_fastforwarding" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_fastforwarding.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="timer_backward_inactive" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_backward_inactive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="timer_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_timer_clock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_timer_clock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_timer_reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_timer_reset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_vtr_paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_vtr_paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solid_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solid_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="timer_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\timer_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_16_tick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16_tick2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
