--- a/opensc-vtrs-gui/Icons.resx
+++ b/opensc-vtrs-gui/Icons.resx
@@ -139,4 +139,7 @@
   <data name="_16_vtr_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\16_vtr_stopped.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_16_vtr_unknown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\16_vtr_unknown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
